[package]
name = "estreamer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ecore = { git = "https://github.com/BloodWalrus/epsilon-core" }
mpu6050 = { git = "https://github.com/BloodWalrus/mpu6050improved" }
glam = "0.21.2"
linux-embedded-hal = "0.3.2"
